[metadata]
name = rownd_django
description = Rownd bindings for Django
long_description = file: README.md
url = https://rownd.io
author = Rownd, Inc.
author_email = support@rownd.io
license = Apache 2.0
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.0
    Framework :: Django :: 3.1
    Framework :: Django :: 3.2
    Framework :: Django :: 4.0
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Internet :: WWW/HTTP :: Session

[project_urls]
    Documentation = https://docs.rownd.io/rownd/sdk-reference/web/django
    Source = https://github.com/rownd/django


[options]
include_package_data = true
packages = find:
python_requires = >=3.8
install_requires =
    Django >= 3.0
    PyJWT >= 2.3
    cryptography >= 36.0
    requests >= 2.27
